<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/sciencebtn"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/btn_science_txt"
        android:textColor="@color/colorBtnTextLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basicbtn"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/miscbtn"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/btn_misc_txt"
        android:textColor="@color/colorBtnTextLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/sciencebtn"
        app:layout_constraintTop_toBottomOf="@+id/livingbtn"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/livingbtn"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/btn_living_txt"
        android:textColor="@color/colorBtnTextLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/basicbtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/basicbtn"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/btn_basic_txt"
        android:textColor="@color/colorBtnTextLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>